--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+epics-seq (2.2.3-4) unstable; urgency=medium
+
+  * Fix Conflicts:
+
+ -- Michael Davidsaver <mdavidsaver@gmail.com>  Tue, 15 Mar 2016 12:47:23 -0400
+
 epics-seq (2.2.3-3) unstable; urgency=medium
 
   * fix all -> any dep
