--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+epics-seq (2.2.3-5) unstable; urgency=medium
+
+  * Use build profile to enable RTEMS cross build
+
+ -- Martin Konrad <konrad@frib.msu.edu>  Thu, 13 Sep 2018 14:39:18 -0400
+
 epics-seq (2.2.3-4) unstable; urgency=medium
 
   * Fix Conflicts:
