--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+epics-seq (2.2.7-1) unstable; urgency=medium
+
+  * New upstream version 2.2.7
+  * Rebase patch queue
+  * Bump up version in package names
+
+ -- Martin Konrad <konrad@frib.msu.edu>  Tue, 19 Nov 2019 11:13:40 -0500
+
 epics-seq (2.2.6-2) unstable; urgency=medium
 
   * Bump up standards version
